--- a/app/globals.css
+++ b/app/globals.css
@@ -4,19 +4,10 @@ body {
   color: white;
   margin: 0;
   padding: 0;
-}
-
-.center-content {
-  text-align: center;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin: 0;
-  padding: 0;
+  text-align: center; /* Centers text */
 }
 
 h1, h2, p, a {
-  margin: 0;
+  margin: 0.2em;
   padding: 0;
 }
